--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,24 @@
-title: My personal blog - Adam Neilson
-email: your-email@domain.com
+title: My personal blog - Ayush Karn
+email: ayush@disroot.org
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+This is my home on the web.
 permalink: ':title/'
 baseurl: "/adam-blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
-author: Adam Neilson # add your name
-author-pic: adam-face.jpg
-about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
+author: Ayush Karn # add your name
+author-pic: ayush-face.jpg
+about-author:  My name is Ayush Karn. I’m an Engineering student from India.
+                I develop mobile applications using the Flutter SDK.
 
 # Contact links
-email: # Add your Email address
-phone: # Add your Phone number
-website: # Add your website, do not add http://
-linkedin: # Add your Linkedin handle
-github: artemsheludko # Add your Github handle
-twitter: '@artemsheludko_' # Add your Twitter handle
-facebook: # Add your Facebook handle
-instagram: # Add your Instagram handle
-pinterest: # Add your Pinterest handle
+email: ayush@disroot.org # Add your Email address
+website: eldraco19.github.io # Add your website, do not add http://
+linkedin: ayush-karn # Add your Linkedin handle
+github: eldraco19 # Add your Github handle
+twitter: '@_eldraco_' # Add your Twitter handle
 
-# Newsletter
-mailchimp: # Add your MailChimp form identifier.
-
-# Disqus
-discus_identifier: mr-brown # Add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
