--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ twitter: '@_eldraco_' # Add your Twitter handle
 
 
 # Disqus
-discus_identifier: mr-brown # Add your discus identifier
+discus_identifier: eldraco # Add your discus identifier
 
 
 # Tracker
