added another blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My personal blog - Ayush Karn
+title: Ayush Karn's blog
 email: ayush@disroot.org
 description: > # this means to ignore newlines until "baseurl:"
   This is my home on the web.
